syntax = "proto3";

package finagler.protobuf;

import "google/protobuf/any.proto";

option java_multiple_files = true;
option java_outer_classname = "FinagleGrpcCommonPB";
option java_package = "io.finagler.protobuf.dto.common";

message KeyValue{
    string key = 1;
    string value = 2;
}
message TPAExtensionsDTO {
    repeated KeyValue elements = 1;
}
message TraceInfo {
    int64 traceId = 1;
    int64 spanId = 2;
    int64 parentSpanId = 3;
    bool sampled = 4;
    int32 flags = 5;
    string peerHost = 6;
    int32 peerPort = 7;
    TPAExtensionsDTO tpaExtensions = 1000;
}
message Header {
    string uri = 1;
    string taskId = 2;
    string source = 3;
    string destination = 4;
    map<string, string> contextMap = 8;
    int32 timeout = 10;
    TraceInfo traceInfo = 20;
    TPAExtensionsDTO tpaExtensions = 1000;
}
message RequestMessage {
    Header header = 1;
    google.protobuf.Any body = 10;
    TPAExtensionsDTO tpaExtensions = 1000;
}
message ResponseMessage {
    string taskId = 1;
    repeated KeyValue elapsedTimes = 2;
    ErrorDTO error = 3;
    google.protobuf.Any body = 10;
    int64 time = 15;
    TPAExtensionsDTO tpaExtensions = 1000;
}
message ErrorDTO {
    string code = 1;
    string message = 2;
    string source = 3;
    TPAExtensionsDTO tpaExtensions = 1000;
}

message GeneralRpcRequest {
    map<string, string> header = 1;
    TraceInfo traceInfo = 2;
    google.protobuf.Any body = 7;
}

message GeneralRpcResponse {
    map<string, string> header = 1;
    ErrorDTO error = 2;
    map<string, int32> elapsedTime = 3;
    google.protobuf.Any body = 7;
}

service RouterService {
    rpc handleRequest(RequestMessage) returns (ResponseMessage);
}